[package]
name = "doppler"
version = "0.2.3"
edition = "2021"
description = "Rust FFI bindings for the doppler C library"
license = "MIT"

[[example]]
name = "fft_demo"
path = "examples/fft_demo.rs"

[[example]]
name = "simd_demo"
path = "examples/simd_demo.rs"

[[example]]
name = "fft_bench"
path = "examples/fft_bench.rs"

[[example]]
name = "nco_demo"
path = "examples/nco_demo.rs"

[[example]]
name = "acc_demo"
path = "examples/acc_demo.rs"

[dependencies]
num-complex = "0.4"
rustfft = "6.4.1"
