[project]
name = "doppler-cli"
version = "0.2.1"
description = "CLI for doppler-dsp signal processing pipelines"
requires-python = ">=3.12"
dependencies = [
    "doppler-dsp>=0.2.0",
    "doppler-specan>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage   = "https://doppler-dsp.github.io/doppler/"
Repository = "https://github.com/doppler-dsp/doppler"

[project.scripts]
doppler = "doppler_cli.__main__:main"
doppler-source = "doppler_cli.source:main"

[tool.pytest.ini_options]
testpaths = ["doppler_cli/tests"]

[tool.uv.build-backend]
module-root = "."
module-name = "doppler_cli"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
